examples/test/testpolicy18644.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18644
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key42: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value12
      podSelector:
        matchLabels:
          key35: value31
          key31: value18
          key11: value9
